--- a/roles/frontend/templates/nginx.conf
+++ b/roles/frontend/templates/nginx.conf
@@ -48,8 +48,8 @@ http {
           try_files $uri /images/placeholder.jpg;
         }
         location /api/catalogue/ { proxy_pass http://catalogue-{{ENV}}.devsecopswithshri.site:8080/; }
-        location /api/user/ { proxy_pass http://cart-{{ENV}}.devsecopswithshri.site:8080/; }
-        location /api/cart/ { proxy_pass http://user-{{ENV}}.devsecopswithshri.site:8080/; }
+        location /api/user/ { proxy_pass http://user-{{ENV}}.devsecopswithshri.site:8080/; }
+        location /api/cart/ { proxy_pass http://cart-{{ENV}}.devsecopswithshri.site:8080/; }
         location /api/shipping/ { proxy_pass http://shipping-{{ENV}}.devsecopswithshri.site:8080/; }
         location /api/payment/ { proxy_pass http://payment-{{ENV}}.devsecopswithshri.site:8080/; }
 
