update the file

--- a/roles/common/tasks/java.yml
+++ b/roles/common/tasks/java.yml
@@ -1,3 +1,6 @@
+- name: Configuring hostname
+  ansible.builtin.shell: set-hostname {{ COMPONENT }}-{{ ENV }}
+
 - name: Installing maven / java11
   ansible.builtin.dnf:
     name: maven
