--- a/roles/rabbitmq/vars/main.yml
+++ b/roles/rabbitmq/vars/main.yml
@@ -2,5 +2,6 @@ COMPONENT: "rabbitmq"
 APP_PATH: "/app"
 APP_USER: "roboshop"
 URL: "https://stan-robotshop.s3.amazonaws.com/shipping-v3.zip "
+secrets: "{{ lookup('community.hashi_vault.hashi_vault', 'secret=roboshop-dev/data/rabbitmq token={{vault_token}} url=https://vault.devsecopswithshri.site:8200 validate_certs=False') }}"
 
 
